# llama.cpp

./: CMakeLists.txt
common/: CMakeLists.txt
examples/: CMakeLists.txt
examples/main/: main.cpp
ffi/: CMakeLists.txt  ffi.cpp  ffi.h
